# ThermalVis-of-Indoor-Environments

./: .gitignore  README.md  pyproject.toml  thermalvis.spec
src/thermalvis_of_indoor_environments/: __init__.py  __main__.py  app.py  cli.py
tests/: test.py  test_app.py
